- min build is 19 for my env - update dependencies in .project files -

--- a/.project
+++ b/.project
@@ -3,6 +3,10 @@
 	<name>TodoTxtTouch</name>
 	<comment></comment>
 	<projects>
+		<project>ActionBar-PullToRefresh</project>
+		<project>ActionBar-PullToRefresh-extras</project>
+		<project>actionbarsherlock</project>
+		<project>chuckbjones-SwipeToDismissUndoList-ec6bf93</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
