--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ android.library.reference.1=dependencies/chuckbjones-SwipeToDismissUndoList-ec6b
 android.library.reference.2=dependencies/ActionBar-PullToRefresh-e8e6d2b58c/extras/actionbarsherlock
 android.library=false
 android.library.reference.3=dependencies/JakeWharton-ActionBarSherlock-c47975f/actionbarsherlock
+android.library.reference.4=../google_play_services/libproject/google-play-services_lib
